--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -297,6 +297,8 @@ services:
         - ${NGINX_HOST_LOG_PATH}:/var/log/nginx
         - ${NGINX_SITES_PATH}:/etc/nginx/sites-available
         - ${NGINX_SSL_PATH}:/etc/nginx/ssl
+        - ./data/certbot/certs/:/var/certs
+        - ./certbot/letsencrypt/:/var/www/letsencrypt
       ports:
         - "${NGINX_HOST_HTTP_PORT}:80"
         - "${NGINX_HOST_HTTPS_PORT}:443"
@@ -306,6 +308,19 @@ services:
       networks:
         - frontend
         - backend
+
+### CERTBOT SLL ################################################
+    certbot:
+      build:
+        context: ./certbot
+      volumes:
+        - ./data/certbot/certs/:/var/certs
+        - ./certbot/letsencrypt/:/var/www/letsencrypt
+      environment:
+        - CN=getrearview.com
+        - EMAIL=ssl@rearview.com
+      networks:
+        - frontend
 
 ### MySQL ################################################
     mysql:
