--- a/nginx/sites/default.conf
+++ b/nginx/sites/default.conf
@@ -1,40 +1,41 @@
 server {
+	listen 80;
+	server_name getrearview.com;
+	return 301 https://getrearview.com$request_uri;
+}
 
-    listen 80 default_server;
-    listen [::]:80 default_server ipv6only=on;
+server {
+	listen 443 ssl;
+	listen [::]:443 ssl ipv6only=on;
+	ssl_certificate /var/certs/getrearview.com-cert1.pem;
+	ssl_certificate_key /var/certs/getrearview.com-privkey1.pem;
 
-    # For https
-    # listen 443 ssl default_server;
-    # listen [::]:443 ssl default_server ipv6only=on;
-    # ssl_certificate /etc/nginx/ssl/default.crt;
-    # ssl_certificate_key /etc/nginx/ssl/default.key;
+	server_name getrearview.com;
+	root /var/www/public;
+	index index.php index.html index.htm;
 
-    server_name localhost;
-    root /var/www/public;
-    index index.php index.html index.htm;
+	location / {
+		try_files $uri $uri/ /index.php$is_args$args;
+	}
 
-    location / {
-         try_files $uri $uri/ /index.php$is_args$args;
-    }
+	location ~ \.php$ {
+		try_files $uri /index.php =404;
+		fastcgi_pass php-upstream;
+		fastcgi_index index.php;
+		fastcgi_buffers 16 16k;
+		fastcgi_buffer_size 32k;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		#fixes timeouts
+		fastcgi_read_timeout 600;
+		include fastcgi_params;
+	}
 
-    location ~ \.php$ {
-        try_files $uri /index.php =404;
-        fastcgi_pass php-upstream;
-        fastcgi_index index.php;
-        fastcgi_buffers 16 16k;
-        fastcgi_buffer_size 32k;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        #fixes timeouts
-        fastcgi_read_timeout 600;
-        include fastcgi_params;
-    }
+	location ~ /\.ht {
+		deny all;
+	}
 
-    location ~ /\.ht {
-        deny all;
-    }
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/letsencrypt/;
-        log_not_found off;
-    }
+	location /.well-known/acme-challenge/ {
+		root /var/www/letsencrypt/;
+		log_not_found off;
+	}
 }
